--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ input {
   border: 2px solid #DDD;
   color: #CCC;
   outline: 0px solid red;
-  font-family: roc-grotesk, sans-serif;;
+  font-family: roc-grotesk, sans-serif;
 }
 #search-item {
   padding-left: 4px;
